@@ -3,6 +3,10 @@ Changelog
 
 In next version
 
+- Fixed acquisition-wrapping issue with the (patched) bound template
+  class (could cause infinite loop due to cyclic acquisition
+  chain). [malthe]
+
 - Moved evaluate_path and evaluate_exists over to ``z3c.pt``, adding
   support for global ``path()`` and ``exists()`` functions for use in
   ``python:`` expressions to it (LP #317967). [sidnei]
